press overflow fix, sigup panel IE fix

--- a/source/stylesheets/_homepage.scss
+++ b/source/stylesheets/_homepage.scss
@@ -9,9 +9,6 @@ $triangle-img-hide-point: 730px;
     position: relative;
     z-index: 100;
     @media (max-width: 1050px) {
-display: flex;
-flex-direction: column;
-justify-content: center;
 padding: 0 30px;
     }
     @media (max-width: 500px) {
